# langchain-modules

./: pyproject.toml
langchain/: 1-DataIngestion.ipynb  2-DataTransformation.ipynb  3-DataEmbedding.ipynb
langchain/1-Ingestion/: 1-ReadingTextDoc.ipynb  2-ReadingPDFDoc.ipynb  3-ReadingWebContent copy.ipynb  4-ReadingResearchPaper copy.ipynb  5-ReadingWikipedia.ipynb
langchain/2-Transfomation/: 1-RecursiveCharacterTextSplitter copy.ipynb  2-CharacterTextSplitter copy.ipynb  3-HTMLHeaderTextSplitter copy.ipynb  4-RecursiveJsonSplitter.ipynb
langchain/3-Embedding/: 1-OpenAIEmbeddings.ipynb  2-OllamaEmbeddings.ipynb
