[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.5",
    "ipykernel>=6.29.5",
    "langchain",
    "langchain-community>=0.0.38",
    "langchain-openai>=0.1.7",
    "langchain-text-splitters>=0.0.2",
    "lxml>=5.3.0",
    "pymupdf>=1.24.10",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.1",
    "wikipedia>=1.4.0",
]

[tool.uv.sources]
langchain = { workspace = true }
